// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders learn react link 1`] = `
<input
  aria-invalid="false"
  class="MuiOutlinedInput-input MuiInputBase-input css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input"
  id="outlined-required"
  name="firstName"
  placeholder="Your Name.."
  type="firstName"
  value=""
/>
`;

exports[`renders learn react link 2`] = `
<input
  aria-invalid="false"
  class="MuiOutlinedInput-input MuiInputBase-input css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input"
  id="outlined-disabled"
  name="surname"
  placeholder="Your Surname.."
  type="surname"
  value=""
/>
`;
